--- a/src/main/resources/view/TelaLogin.fxml
+++ b/src/main/resources/view/TelaLogin.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaLoginController">
+   <children>
+      <VBox layoutX="336.0" layoutY="230.0" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox fx:id="topTitle" alignment="CENTER" prefHeight="65.0" prefWidth="1280.0" styleClass="topTile" stylesheets="@../css/loguinStyle.css">
+               <children>
+                  <Label text="EasyAcademy" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="38.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="618.0" prefWidth="1280.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="618.0" prefWidth="244.0" spacing="12.0">
+                     <children>
+                        <Label text="Usuário">
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                        </Label>
+                        <TextField alignment="CENTER" />
+                        <Label layoutX="78.0" layoutY="284.0" text="Senha">
+                           <font>
+                              <Font name="System Bold" size="30.0" />
+                           </font>
+                        </Label>
+                        <PasswordField alignment="CENTER">
+                           <VBox.margin>
+                              <Insets bottom="200.0" />
+                           </VBox.margin>
+                        </PasswordField>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="34.0" prefWidth="1280.0" styleClass="footerInfo" stylesheets="@../css/loguinStyle.css" />
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
