--- a/src/main/resources/view/TelaLogin.fxml
+++ b/src/main/resources/view/TelaLogin.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -26,6 +28,11 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="618.0" prefWidth="244.0" spacing="12.0">
                      <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <VBox.margin>
+                              <Insets top="-90.0" />
+                           </VBox.margin>
+                        </ImageView>
                         <Label text="Usuário">
                            <font>
                               <Font name="System Bold" size="30.0" />
@@ -39,9 +46,19 @@
                         </Label>
                         <PasswordField alignment="CENTER">
                            <VBox.margin>
-                              <Insets bottom="200.0" />
+                              <Insets />
                            </VBox.margin>
                         </PasswordField>
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="136.0" styleClass="buttonEntrar" stylesheets="@../css/loguinStyle.css" text="Entrar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Button>
+                        <Label fx:id="msgErroLogin" text="Label" textFill="#ff5a5a" visible="false">
+                           <font>
+                              <Font name="System Italic" size="14.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                </children>
