--- a/src/main/resources/view/TelaCadastro.fxml
+++ b/src/main/resources/view/TelaCadastro.fxml
@@ -91,7 +91,7 @@
                         </HBox>
                         <VBox prefHeight="510.0" prefWidth="1280.0">
                            <children>
-                              <HBox prefHeight="49.0" prefWidth="1280.0" stylesheets="@../css/cadUserStyle.css">
+                              <HBox prefHeight="49.0" prefWidth="1280.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="630.0" />
                                     <HBox layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="630.0" />
