--- a/src/main/resources/view/TelaCadastro.fxml
+++ b/src/main/resources/view/TelaCadastro.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -68,7 +71,7 @@
                                     <Insets right="20.0" />
                                  </padding>
                                  <children>
-                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Logout">
+                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Voltar">
                                        <font>
                                           <Font name="System Bold" size="16.0" />
                                        </font>
@@ -89,13 +92,259 @@
                               <Insets left="20.0" />
                            </padding>
                         </HBox>
-                        <VBox prefHeight="510.0" prefWidth="1280.0">
+                        <VBox prefHeight="510.0" prefWidth="1280.0" spacing="5.0">
                            <children>
-                              <HBox prefHeight="49.0" prefWidth="1280.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                              <HBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="1259.0" spacing="15.0">
                                  <children>
-                                    <HBox prefHeight="100.0" prefWidth="630.0" />
-                                    <HBox layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="630.0" />
+                                    <Label text="Tipo de Usuário">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <RadioButton mnemonicParsing="false" text="Administrador">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </RadioButton>
+                                    <RadioButton layoutX="141.0" layoutY="13.0" mnemonicParsing="false" text="Professor">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </RadioButton>
+                                    <RadioButton layoutX="265.0" layoutY="13.0" mnemonicParsing="false" text="Aluno">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </RadioButton>
                                  </children>
+                                 <padding>
+                                    <Insets left="5.0" right="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Nome">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="5.0" />
+                                       </padding></HBox>
+                                    <HBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="CPF">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets right="295.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <Label layoutX="20.0" layoutY="15.0" text="Matricula">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding></HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="20.0" prefHeight="42.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField prefHeight="26.0" prefWidth="284.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField prefHeight="26.0" prefWidth="284.0" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="20.0" prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Rua">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Nº">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets right="150.0" />
+                                             </HBox.margin>
+                                          </Label>
+                                          <Label layoutX="20.0" layoutY="15.0" text="CEP">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="52.0" prefHeight="42.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="143.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField prefHeight="26.0" prefWidth="444.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField prefHeight="26.0" prefWidth="444.0" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="20.0" prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Cidade">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Complemento">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="52.0" prefHeight="42.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField prefHeight="26.0" prefWidth="601.0" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="210.0" prefHeight="26.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="620.0">
+                                       <children>
+                                          <Label text="Telefone">
+                                             <font>
+                                                <Font name="System Bold" size="15.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets left="5.0" />
+                                       </padding>
+                                    </HBox>
+                                    <HBox alignment="BOTTOM_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="620.0">
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="20.0" layoutY="241.0" prefHeight="42.0" prefWidth="1259.0" spacing="20.0" stylesheets="@../css/cadUserStyle.css">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                       <children>
+                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="TOP_CENTER" prefHeight="63.0" prefWidth="1259.0">
+                                 <children>
+                                    <Button mnemonicParsing="false" prefHeight="66.0" prefWidth="358.0" stylesheets="@../css/cadUserStyle.css" text="Cadastrar">
+                                       <font>
+                                          <Font name="System Bold" size="28.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
                               </HBox>
                            </children>
                            <padding>
