--- a/src/main/resources/view/TelaCadastro.fxml
+++ b/src/main/resources/view/TelaCadastro.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -104,17 +105,20 @@
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <RadioButton mnemonicParsing="false" text="Administrador">
+                                    <RadioButton fx:id="cad_radioAdmin" mnemonicParsing="false" text="Administrador">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                       <toggleGroup>
+                                          <ToggleGroup fx:id="cad_toggleSelect" />
+                                       </toggleGroup>
+                                    </RadioButton>
+                                    <RadioButton fx:id="cad_radioProfessor" layoutX="141.0" layoutY="13.0" mnemonicParsing="false" text="Professor" toggleGroup="$cad_toggleSelect">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </RadioButton>
-                                    <RadioButton layoutX="141.0" layoutY="13.0" mnemonicParsing="false" text="Professor">
-                                       <font>
-                                          <Font size="15.0" />
-                                       </font>
-                                    </RadioButton>
-                                    <RadioButton layoutX="265.0" layoutY="13.0" mnemonicParsing="false" text="Aluno">
+                                    <RadioButton fx:id="cad_radioAluno" layoutX="265.0" layoutY="13.0" mnemonicParsing="false" text="Aluno" toggleGroup="$cad_toggleSelect">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -165,7 +169,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="cad_txtNome" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -173,7 +177,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="284.0" />
+                                          <TextField fx:id="cad_txtCpf" prefHeight="26.0" prefWidth="284.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -181,7 +185,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="284.0" />
+                                          <TextField fx:id="cad_txtMat" prefHeight="26.0" prefWidth="284.0" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -229,7 +233,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="cad_txtRua" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="143.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -237,7 +241,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="444.0" />
+                                          <TextField fx:id="cad_txtNum" prefHeight="26.0" prefWidth="444.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="656.0" layoutY="10.0" prefHeight="42.0" prefWidth="306.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -245,7 +249,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="444.0" />
+                                          <TextField fx:id="cad_txtCep" prefHeight="26.0" prefWidth="444.0" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -285,7 +289,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="cad_txtCidade" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="42.0" prefWidth="620.0" styleClass="bordaCampos" stylesheets="@../css/cadUserStyle.css">
@@ -293,7 +297,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField prefHeight="26.0" prefWidth="601.0" />
+                                          <TextField fx:id="cad_txtComplemento" prefHeight="26.0" prefWidth="601.0" />
                                        </children>
                                     </HBox>
                                  </children>
@@ -326,7 +330,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
                                        <children>
-                                          <TextField minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
+                                          <TextField fx:id="cad_txtTel" minWidth="-Infinity" prefHeight="26.0" prefWidth="602.0" />
                                        </children>
                                     </HBox>
                                  </children>
