--- a/src/main/resources/view/TelaAdmin.fxml
+++ b/src/main/resources/view/TelaAdmin.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaCadastroController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaAdminController">
    <children>
       <VBox layoutX="336.0" layoutY="230.0" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -73,11 +72,11 @@
                                     <Insets right="20.0" />
                                  </padding>
                                  <children>
-                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Logout">
+                                    <Button mnemonicParsing="false" onAction="#deslogar" prefHeight="1.0" prefWidth="100.0" styleClass="buttonSair" stylesheets="@../css/adminStyle.css" text="Deslogar" textFill="#ff4141">
                                        <font>
-                                          <Font name="System Bold" size="16.0" />
+                                          <Font name="System Bold" size="14.0" />
                                        </font>
-                                    </Label>
+                                    </Button>
                                  </children>
                               </HBox>
                            </children>
@@ -93,36 +92,22 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/adminStyle.css" text="Cadastrar Usuário">
+                              <Button mnemonicParsing="false" onAction="#goCadastro" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Usuário">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" text="Cadastrar Turma" GridPane.columnIndex="2">
-                                 <font>
-                                    <Font name="System Bold" size="24.0" />
-                                 </font>
-                                 <stylesheets>
-                                    <URL value="@../css/alunoStyle.css" />
-                                    <URL value="@../css/adminStyle.css" />
-                                 </stylesheets>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/adminStyle.css" text="Alterar Dados do Usuário" GridPane.rowIndex="1">
+                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Turma" GridPane.columnIndex="2">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/adminStyle.css" text="Cadastrar Disciplina" GridPane.columnIndex="1">
+                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Alterar Dados do Usuário" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/adminStyle.css" text="Alterar Dados ds Disciplina" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font name="System Bold" size="24.0" />
-                                 </font>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" stylesheets="@../css/adminStyle.css" text="Alterar Dados da Turma" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                              <Button mnemonicParsing="false" prefHeight="251.0" prefWidth="344.0" styleClass="buttonSquare" stylesheets="@../css/adminStyle.css" text="Cadastrar Disciplina" GridPane.columnIndex="1">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
