--- a/src/main/resources/view/TelaCadastro.fxml
+++ b/src/main/resources/view/TelaCadastro.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaLoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TelaCadastroController">
    <children>
       <VBox layoutX="336.0" layoutY="230.0" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -44,7 +44,7 @@
                            <children>
                               <HBox prefHeight="100.0" prefWidth="1080.0" spacing="5.0">
                                  <children>
-                                    <Label text="nomeAdmin">
+                                    <Label fx:id="nomeAdmin" text="nomeAdmin">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
@@ -54,7 +54,7 @@
                                           <Font size="21.0" />
                                        </font>
                                     </Label>
-                                    <Label text="matricula">
+                                    <Label fx:id="matriculaAdmin" text="matricula">
                                        <font>
                                           <Font size="21.0" />
                                        </font>
