[Ayrton] Implementação do controller de Cadastrar Turmas e pequenas alterações.

--- a/src/main/resources/view/TelaCadastroTurma.fxml
+++ b/src/main/resources/view/TelaCadastroTurma.fxml
@@ -75,11 +75,11 @@
                                     <Insets right="20.0" />
                                  </padding>
                                  <children>
-                                    <Label styleClass="logout" stylesheets="@../css/alunoStyle.css" text="Voltar">
+                                    <Button mnemonicParsing="false" onAction="#voltar" text="Sair">
                                        <font>
-                                          <Font name="System Bold" size="16.0" />
+                                          <Font name="System Bold" size="15.0" />
                                        </font>
-                                    </Label>
+                                    </Button>
                                  </children>
                               </HBox>
                            </children>
